--- a/people.htm
+++ b/people.htm
@@ -554,13 +554,13 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 		<td><b>Alex Hickman</b></td>
 		<td>Biomedical Engineering</td>
 		<td>07/2020&ndash;05/2021</td>
-		<td></td>
+		<td>Engineer at Rivanna Medical</td>
 	</tr>-->
 	<tr>
 		<td><b>Aaron Ho</b></td>
 		<td>Biochemistry and Computer Science</td>
 		<td>10/2018&ndash;05/2020</td>
-		<td>Capital One</td>
+		<td></td>
 	</tr>
 	<tr>
 		<td><b>Zhou Lu</b></td>
@@ -590,7 +590,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 		<td><b>Xinyue Qiu</b></td>
 		<td>Biology and Statistics</td>
 		<td>04/2019&ndash;05/2021</td>
-		<td>MS Student in Computational Biology, Carnegie Mellon University</td>
+		<td>MS Student in Biostatistics, Yale University</td>
 	</tr>-->
 	<tr>
 		<td><b>Sekou Rowe</b></td>
@@ -602,7 +602,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 		<td><b>Allison Ryu</b></td>
 		<td>Computer Science</td>
 		<td>09/2018&ndash;12/2018</td>
-		<td></td>
+		<td>Software engineer at Amazon</td>
 	</tr>
 	<tr>
 		<td><b>Celina Shih</b></td>
