--- a/publication.htm
+++ b/publication.htm
@@ -115,13 +115,18 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Publications</font></h2>
 <hr>
 <h3><a href="https://scholar.google.com/citations?user=GV7vSDMAAAAJ" target="_blank"><font color="#002F6C">Google Scholar profile</font></a></h3>
-<!--<hr>
+<hr>
 <h3><font color="#002F6C">Recent Preprints</font></h3>
+* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-</ol>-->
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">Cell-specific chromatin landscape of human coronary artery resolves regulatory mechanisms of disease risk</a><br>
+Adam W. Turner*, <u>Sheng'en Hu</u>*, Jose Verdezoto Mosquera, Wei Feng Ma, Chani Hodonsky, Doris Wong, Gaelle Auguste, Katia Sol-Church, Emily A. Farber, Soumya Kundu, Anshul B. Kundaje, Nicolas G. Lopez, Lijiang Ma, Saikat Kumar B. Ghosh, Suna Onengut-Gumuscu, Euan A. Ashley, Thomas Quertermous, Aloke V. Finn, Nicholas J. Leeper, Jason C. Kovacic, Johan L.M. Bjorkegren, <u>Chongzhi Zang</u><sup>#</sup>, Clint L. Miller<sup>#</sup>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2021.06.07.447388v1" target="_blank">https://doi.org/10.1101/2021.06.07.447388</a> (2021)
+</p></li>
+</ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
-* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
 <li><p><a href="https://doi.org/10.1093/nargab/lqab022" target="_blank">BARTweb: a web server for transcriptional regulator association analysis</a><br> 
 <u>Wenjing Ma</u>*, <u>Zhenjia Wang</u>*, <u>Yifan Zhang</u>, Neal E Magee, <u>Yayi Feng</u>, <u>Ruoyao Shi</u>, Yang Chen, <u>Chongzhi Zang</u>
@@ -331,7 +336,7 @@ Zhibin Wang*, <u>Chongzhi Zang</u>*, Jeffrey A. Rosenfeld*, Dustin E. Schones, A
 <i><b>Nature Genetics</b></i> 40, 897&ndash;903 (2008)
 </p></li></ol>
 <hr>
-<p align="right">Last modified: April 9, 2021</p>
+<p align="right">Last modified: June 8, 2021</p>
 </div>
 
 </body></html>
