--- a/bart/index.htm
+++ b/bart/index.htm
@@ -103,7 +103,7 @@ BART is developed and maintained by the <a href="http://zanglab.org/" target="_b
 </p>
 
 <hr>
-<h3 id="bartweb"><a href="http://bartweb.org/" target="_blank"><font color="#002F6C">Web Interface (Beta)</font></a></h3>
+<h3 id="bartweb"><a href="http://bartweb.org/" target="_blank"><font color="#002F6C">Web Interface</font></a></h3>
 <p>
 BART web interface can be accessed <a href="http://bartweb.org/" target="_blank">here</a>.
 </p>
