--- a/people.htm
+++ b/people.htm
@@ -207,14 +207,14 @@ Email: <a href="mailto:sh8tv@virginia.edu">sh8tv@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Dr. Sheng'en Shawn Hu is a postdoctoral research associate starting November 2017. Before joining UVA, he completed his PhD training in bioinformatics from School of Life Science and Technology, Tongji University in China, and was a visiting student at Harvard University. He is working on developing computatinoal methodology of integrating high-throughput chromatin accessibility data for studying functional gene regulation.
 </p><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/chris_dampier.jpg" style="width:180px">
 <b>Christopher Dampier, MD</b></p>
 <p style="line-height: 1.6;">
 Email: <a href="mailto:chd5n@virginia.edu">chd5n@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Chris is a General Surgery resident and a Research Fellow in the Department of Surgery and the Center for Public Health Genomics at the University of Virginia. He received his BA in Ethics, Politics, and Economics from Yale University and his MD from the University of Michigan. He was first exposed to informatics as a science while working as a commodities analyst at Louis Dreyfus Commodities, and he began analyzing high-dimensional bioinformatics data in the fMRI lab of Dr Jon-Kar Zubieta at the University of Michigan. He moved to Charlottesville for his residency in General Surgery and completed two years of clinical training prior to joining Dr Craig Slingluff's Surgical Oncology Training Grant under the mentorship of Dr Graham Casey in 2018. After two years of research, he will return to clinical training to complete his residency. Chris is a physician with growing expertise in bioinformatics and an interest in cancer genomics. His research focuses on molecular phenotyping and functional follow-up of GWAS-identified risk loci using high-throughput sequencing data in the setting of colorectal cancer.
-</p><br>
+</p><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/qingying_chen.jpg" style="width:180px">
 <b>Qingying Chen, PhD</b></p>
@@ -260,7 +260,7 @@ Email: <a href="mailto:hz9fq@virginia.edu">hz9fq@virginia.edu</a><br>
 Hongpan Zhang is a research specialist in the lab and will be a PhD student in the Biomedical Sciences (BIMS) program starting 2021. He obtained two bachelor's degrees in life sciences and software engineering from Sichuan University. Hongpan is keen to study the connection between genomic phenomena and diseases. He hopes to raise his knowledge of biological issues in his research work. Hongpan is a basketball fan and also loves other sports events. He's interested in historical knowledge as well.
 </p><br>
 <hr>
-<h3><font color="#002F6C">Research Volunteer</font></h3>
+<h3><font color="#002F6C">Research Assistants</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/ruoyao_shi.jpg" style="width:180px">
 <b>Ruoyao Shi</b></p>
@@ -269,17 +269,17 @@ Email: <a href="mailto:rs8cp@virginia.edu">rs8cp@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Ruoyao Shi is a graduate student in biostatistics at the University of Michigan. She received her B.S. in biology from Tang Aoqing Honors Program in Biological Science, Jilin University, China. She joined the lab as a visiting undergraduate student in 2019, and continued doing research with the lab during graduate studies. She is enthusiastic about biostatistics and biological big data analysis, and is also interested in volunteer service, music and art in her spare time.
 </p><br>
-<hr>
-<h3><font color="#002F6C">Undergraduate Students</font></h3>
-<h4><font color="#002F6C">Class of 2021</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/megan_grieco.jpg" style="width:180px">
 <b>Megan Grieco</b></p>
 <p style="line-height: 1.6;">
 Email: <a href="mailto:mg3fh@virginia.edu ">mg3fh@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Megan Grieco is a Systems Engineering major in the class of 2021, pursuing the Chemical and Biomedical application sequence. She is excited about gaining experience in data science and research within the biological field. After graduation, she is planning on going to medical school. In her free time, she likes to travel, cheer on the Hoos, and rewatch the Office.
+Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works in the lab as a research assistant while preparing for medical school. She joined the lab in Spring 2019 and has been excited about gaining experience in data science and research within the biological field. In her free time, she likes to travel, cheer on the Hoos, and rewatch the Office.
 </p><br><br>
+<hr>
+<h3><font color="#002F6C">Undergraduate Students</font></h3>
+<!--<h4><font color="#002F6C">Class of 2021</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/zack_thomas.jpg" style="height:180px">
 <b>Zack Thomas</b></p>
@@ -319,7 +319,7 @@ Drew Vanichkachorn is an undergraduate student (Class of 2021) in the College of
 Email: <a href="mailto:sn7mq@virginia.edu">sn7mq@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shahbaz Nizam is a Statistics and Economics major in the class of 2021. He is interested in learning about data science and its application with finance and marketing. In his free time, he enjoys traveling, cooking foreign cuisines, and watching movies.
-</p><br><br><br><br>
+</p><br><br><br><br>-->
 <h4><font color="#002F6C">Class of 2022</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
@@ -443,6 +443,14 @@ Email: <a href="mailto:ml9uu@virginia.edu">ml9uu@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Muaaz Luqman is an undergraduate student (class of 2023) from South Riding, Virginia majoring in Commerce with concentrations in Finance and IT in the McIntire School of Commerce. He is interested in learning more about computational biology and its applications in providing solutions to biological issues. In the future, he aspires to go to medical school. In his free time, he enjoys playing and watching sports (Go Pack Go!), volunteering, and traveling. He is also a Resident Advisor and a member of VCG and the MSA.
 </p><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/bia_sajjad.jpg" style="width:180px">
+<b>Bia Sajjad</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:nss8ww@virginia.edu">nss8ww@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Bia Sajjad is an undergraduate student (Class of 2023) majoring in Global Public Health and Spanish in the College of Arts and Sciences. Bia is excited to contribute to genomics research and learn new skills that contribute to advances in computational biology and medicine. She hopes to attend medical school in the future to become a physician. Outside of the classroom, Bia is a scribe at the UVA hospital, a member of the Virginia Dance Team, and enjoys reading and running.
+</p><br><br>
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/kamil_urbanowski.jpg" style="width:180px">
@@ -462,7 +470,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 </p><br>
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
-<!--<h4><font color="#002F6C">Postdoctoral Associates</font></h4>
+<h4><font color="#002F6C">Postdoctoral Associates</font></h4>
 <table id="alumni">
 	<tr>
 		<th>Name</th>
@@ -477,7 +485,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 		<td>Pathology Fellow, National Cancer Institute, NIH</td>
 	</tr>
 </table>
-<br>-->
+<br>
 <h4><font color="#002F6C">Graduate Students</font></h4>
 <table id="alumni">
 	<tr>
@@ -549,13 +557,13 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 		<td>Systems and Information Engineering</td>
 		<td>02/2019&ndash;05/2021</td>
 		<td></td>
-	</tr>
+	</tr>-->
 	<tr>
 		<td><b>Alex Hickman</b></td>
 		<td>Biomedical Engineering</td>
 		<td>07/2020&ndash;05/2021</td>
 		<td>Engineer at Rivanna Medical</td>
-	</tr>-->
+	</tr>
 	<tr>
 		<td><b>Aaron Ho</b></td>
 		<td>Biochemistry and Computer Science</td>
@@ -586,12 +594,12 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 		<td>01/2018&ndash;08/2019</td>
 		<td>MS Student in Statistics, UVA</td>
 	</tr>
-	<!--<tr>
+	<tr>
 		<td><b>Xinyue Qiu</b></td>
 		<td>Biology and Statistics</td>
 		<td>04/2019&ndash;05/2021</td>
 		<td>MS Student in Biostatistics, Yale University</td>
-	</tr>-->
+	</tr>
 	<tr>
 		<td><b>Sekou Rowe</b></td>
 		<td><a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">NSF REU</a> Summer Student; Chemical Engineering, Howard University</td>
@@ -610,12 +618,12 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 		<td>05/2017&ndash;08/2017</td>
 		<td>Bioinformatician, Johns Hopkins University Applied Physics Laboratory</td>
 	</tr>
-	<!--<tr>
+	<tr>
 		<td><b>Zachary V. Thomas</b></td>
 		<td>Biomedical Engineering</td>
 		<td>05/2019&ndash;05/2021</td>
 		<td>PhD Student in Biomedical Engineering, University of Southern California</td>
-	</tr>-->
+	</tr>
 	<tr>
 		<td><a href="https://jinyongyoo.github.io/" target="_blank"><b>Jin Yong (Jeffrey) Yoo</b></a></td>
 		<td>Computer Science</td>
@@ -693,7 +701,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: May 28, 2021</p>
+<p align="right">Last modified: June 30, 2021</p>
 
 </div>
 
