--- a/position.htm
+++ b/position.htm
@@ -114,7 +114,7 @@ function myFunction() {
 -->
 <h2 align="center"><font color="#002F6C">Positions</font></h2>
 <hr>
-<h3><font color="#002F6C">Postdoctoral Research Associates</font></h3>
+<h3><font color="#002F6C">Postdoctoral Research Associates (3)</font></h3>
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -153,7 +153,7 @@ All positions are restricted and contingent on the continuation of funding. The 
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 <hr>
-<h3><font color="#002F6C">Computational Biologist</font></h3>
+<h3><font color="#002F6C">Computational Biologist (1)</font></h3>
 <p style="line-height: 1.6;">
 <font color="#002F6C"><b>Description</b></font>
 </p><p style="line-height: 1.6;">
@@ -188,6 +188,67 @@ All positions are restricted and contingent on the continuation of funding. The 
 For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
 </p>
 <hr>
+<h3><font color="#002F6C">Bioinformatics Research Scientist (1)</font></h3>
+<p style="line-height: 1.6;">
+<font color="#002F6C"><b>Description</b></font>
+</p><p style="line-height: 1.6;">
+Our lab is looking to hire a Research Scientist in bioinformatics and computational genomics. The Research Scientist will be primarily working with the PI and members in the lab to develop bioinformatics tools and to use computational biology approaches for studying functional genomics, epigenetics and transcriptional regulation in model cell systems and human cancer. Projects will be performed in collaboration with basic and translational research laboratories including Drs. Yuh-Hwa Wang and Francine Garrett-Bakelman in the Department of Biochemistry and Molecular Genetics. Dr. Wang’s laboratory is interested in the structure and function of unusual DNA sequences in living cells, and how these sequences cause genome instability and lead to human diseases. Dr. Garrett-Bakelman’s laboratory focuses on the use of functional genomics analyses and experiments to study biological mechanisms leading to Acute Myeloid Leukemia. The job responsibilities include:
+</p>
+<ol style="padding-left: 18px;">
+<li><p style="line-height: 1.6;">
+Conducting basic science research using existing and innovative computational biology approaches;
+</p></li>
+<li><p style="line-height: 1.6;">
+Developing and maintaining bioinformatics tools used for computational biology research;
+</p></li>
+<li><p style="line-height: 1.6;">
+Writing reports and manuscripts for peer-reviewed publications;
+</p></li>
+<li><p style="line-height: 1.6;">
+Attending academic conferences (virtually and/or in-person) to present research works;
+</p></li>
+<li><p style="line-height: 1.6;">
+Mentoring and supervising trainees, including junior postdoctoral fellows, graduate and undergraduate students in the labs on computational biology research;
+</p></li>
+<li><p style="line-height: 1.6;">
+Other research related work for the labs.
+</p></li>
+</ol>
+<p>
+More information on the area of research can be found at the <a href="https://zanglab.github.io/">lab website</a>.
+</p><p style="line-height: 1.6;">
+<font color="#002F6C"><b>Requirements</b></font>
+</p>
+<ol style="padding-left: 18px;">
+<li><p style="line-height: 1.6;">
+<b>Ph.D. or equivalent degree</b> in quantitative science, such as bioinformatics, computational biology, computer science, statistics, applied mathematics, physics, data science, or a related field.
+</p></li>
+<li><p style="line-height: 1.6;">
+<b>At least three-year</b> research experience after completing the doctoral degree on computational genomics and high-throughput sequencing data analysis.
+</p></li>
+<li><p style="line-height: 1.6;">
+Proficient in Python and R programming.
+</p></li>
+<li><p style="line-height: 1.6;">
+Working knowledge of molecular biology and genomics.
+</p></li>
+<li><p style="line-height: 1.6;">
+Excellent academic communication skills and teamwork skills.
+</p></li>
+<li><p style="line-height: 1.6;">
+At least three first-author or senior-author publications in peer-reviewed journals in the related research field.
+</p></li>
+</ol>
+<p style="line-height: 1.6;">
+<font color="#002F6C"><b>Application Process</b></font>
+</p><p style="line-height: 1.6;">
+To <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Research-Scientist-in-Bioinformatics-and-Computational-Genomics_R0025615" target="_blank">apply online</a>, please click <a href="https://uva.wd1.myworkdayjobs.com/UVAJobs/job/Charlottesville-VA/Research-Scientist-in-Bioinformatics-and-Computational-Genomics_R0025615" target="_blank">here</a> and submit a complete application in the system. Meanwhile, Interested applicants can send a complete CV and contact information for three references to <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> with subject line "Research scientist application". The position will remain open until filled.
+</p><p style="line-height: 1.6;">
+All positions are restricted and contingent on the continuation of funding. The University of Virginia is an equal opportunity and affirmative action employer. Women, minorities, veterans and persons with disabilities are strongly encouraged to apply.
+</p><p style="line-height: 1.6;">
+For questions or inquiries, please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a>.
+</p>
+<hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
 <p style="line-height: 1.6;">
 We are recruiting graduate students for research training and completing PhD thesis in the lab. Prospective student should apply for either the <a href="https://med.virginia.edu/bims/" target="_blank">Biomedical Sciences (BIMS) graduate program</a> at the UVA School of Medicine or the <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/bme-graduate-programs" target="_blank">Biomedical Engineering (BME) graduate program</a> at the UVA School of Engineering and Applied Science. Admitted PhD students please contact Dr. Zang for rotation opportunities.
@@ -200,11 +261,11 @@ Undergraduate students are welcome to join the lab before the Third Year to get 
 Undergraduate students from outside of UVA are welcome to conduct summer research in the lab. Eligible students are encouraged to apply to the  <a href="https://med.virginia.edu/summer-research-internship-program" target="_blank">Summer Research Internship Program</a> or the <a href="https://www.nsfreu.org/howtoapply/engineering" target="_blank">NSF</a> <a href="https://engineering.virginia.edu/departments/biomedical-engineering/academics/training-programs/systems-bioengineering-reu" target="_blank">REU Program in Multi-Scale Systems Bioengineering</a>, although opportunities in the lab are not contingent upon admission to the summer programs. Please email <a href="mailto:zang@virginia.edu">zang@virginia.edu</a> for inquiries.
 </p>
 <hr>
-<h3><font color="#002F6C">Why UVA?</font></h3>
+<!--<h3><font color="#002F6C">Why UVA?</font></h3>
 <p style="line-height: 1.6;">Because this is a great place! For more information about the university and the Charlottesville area, please refer to my colleague and friend Nathan's <a href="http://databio.org/whyjoin/" target="_blank">article about "Why you should consider coming to UVA"</a>.
 </p>
-<hr>
-<p align="right">Last modified: March 16, 2021</p>
+<hr>-->
+<p align="right">Last modified: June 30, 2021</p>
 </div>
 
 </body></html>
