--- a/index.htm
+++ b/index.htm
@@ -147,7 +147,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Chongzhi serves as a mentor at the <a href="https://clic-ctsa.org/events/2020-2021-biomedical-data-science-innovation-lab" target="_blank"> 2020-2021 Biomedical Data Science Innovation Lab</a>.
+		Chongzhi serves as a mentor at the <a href="https://spark.adobe.com/page/Z4T8YXXvo3hLd/#2021-biomedical-data-science-innovation-lab-challenges-in-brain-analytics-and-data-integration" target="_blank"> 2020-2021 Biomedical Data Science Innovation Lab</a>.
 		</p>
 	</div>
 </div>
