--- a/research.htm
+++ b/research.htm
@@ -124,10 +124,18 @@ function myFunction() {
 -->
 <h2 align="center"><font color="#002F6C">Research</font></h2>
 <hr>
+<h3><font color="#002F6C">News Releases</font></h3>
+<ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
+<li><a href="https://news.virginia.edu/content/uva-develops-new-tools-battle-cancer-advance-genomics-research" target="_blank">UVA Develops New Tools to Battle Cancer, Advance Genomics Research</a>. <!--UVA Today. -->May 25, 2021</li>
+<li><a href="https://news.virginia.edu/content/cancers-dangerous-renovations-our-chromosomes-revealed" target="_blank">Cancer’s Dangerous Renovations to Our Chromosomes Revealed</a>. <!--UVA Today. -->October 26, 2020</li>
+</p></ul>
+<hr>
 <h3><font color="#002F6C">Research Description</font></h3>
-<p style="line-height: 1.6;">The research in my lab focuses on developing computational methodologies and integrative genomics approaches to study epigenetics and transcriptional regulation of gene expression in a variety of mammalian cell systems and human diseases such as cancer.
-</p><p style="line-height: 1.6;">
-How gene expression is regulated in chromatin is a fundamental question in molecular biology. High-throughput technologies such as next-generation sequencing (NGS) have become powerful tools for studying gene regulation at the genomic scale. We conduct computational research using quantitative models and innovative data science approaches that leverage various genomics technologies to find new biology. Some research directions include:
+<p style="line-height: 1.6;">
+The research in the lab focuses on two aspects: 1) developing quantitative models and computational methods for analyzing high-throughput data generated from emerging genomics technologies; and 2) using innovative computational and data science approaches to study epigenetics and transcriptional regulation of gene expression in mammalian cell systems and human diseases such as cancer.
+</p>
+<p style="line-height: 1.6;">
+How gene expression is regulated in chromatin is a fundamental question in molecular biology. The transcriptional program is a major determinant of cell identity; its dysregulation is involved in many diseases, including cancer. High-throughput genomics technologies enable us to obtain massive data measuring numerous factors and elements in the genome that affect chromatin states and gene regulation. We leverage big data and conduct computational research at the intersection of functional genomics, epigenetics, and cancer biology. Some research directions include:
 </p>
 <br>
 <h3><font color="#002F6C">1. <i>Next-generation sequencing bioinformatics</i></font></h2>
@@ -150,33 +158,29 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 <br><br><br>
 <hr>
 <h3><font color="#002F6C">Collaborations</font></h3>
-<p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaborations between researchers with different backgrounds and expertise. We are creating a collaborative research team and a cross-disciplinary environment in the lab, and we always commit to collaborations on a variety of research projects with experimental biologists, geneticists, oncologists, as well as statisticians, computer scientists, mathematicians, and physicists.</p>
+<p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaborations between researchers with different backgrounds and expertise. We have established a collaborative research team and a cross-disciplinary environment in the lab, and we always commit to collaborations and team science on a variety of research projects with experimental biologists, clinicians, as well as statisticians, computer scientists, mathematicians, and physicists.</p>
 <p style="line-height: 1.6;">Our collaborators include:
 </p>
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/gc8r/" target="_blank"><font color="#002F6C">Graham Casey</font></a>, Center for Public Health Genomics, University of Virginia</li>
-<li><a href="https://lsa.umich.edu/stats/people/faculty/YangChen.html" target="_blank"><font color="#002F6C">Yang Chen</font></a>, Department of Statistics, University of Michigan</li>
-<li><a href="http://www.med.nyu.edu/environmentalmedicine/research-divisions/our-labs/cuddapah-lab" target="_blank"><font color="#002F6C">Suresh Cuddapah</font></a>, Department of Environmental Medicine, New York University</li>
+<li><a href="https://med.nyu.edu/faculty/suresh-cuddapah" target="_blank"><font color="#002F6C">Suresh Cuddapah</font></a>, Department of Environmental Medicine, New York University</li>
 <li><a href="http://www.stat.tsinghua.edu.cn/en/teambuilder/faculty/ke-deng/" target="_blank"><font color="#002F6C">Ke Deng</font></a>, Center for Statistical Science, Tsinghua University</li>
-<li><a href="http://genome.bioch.virginia.edu/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
+<li><a href="https://dutta-labwebsite.github.io/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Genetics, University of Alabama at Birmingham</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="http://guertinlab.org/" target="_blank"><font color="#002F6C">Michael J. Guertin</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
+<li><a href="http://guertinlab.org/" target="_blank"><font color="#002F6C">Michael J. Guertin</font></a>, Department of Genetics and Genome Sciences, University of Connecticut</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="https://med.nyu.edu/environmentalmedicine/research-divisions/our-labs/jin-lab" target="_blank"><font color="#002F6C">Chunyuan Jin</font></a>, Department of Environmental Medicine, New York University</li>
 <li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology, University of Virginia</li>
 <li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine, University of Virginia</li>
-<li><a href="https://cancer.uvahealth.com/about-uva-cancer-center/leadership-team/thomas-p-loughran-md" target="_blank"><font color="#002F6C">Thomas P. Loughran</font></a>, University of Virginia Cancer Center</li>
 <li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Center for Public Health Genomics, University of Virginia</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
 <li><a href="http://www.ntziachristoslab.com/" target="_blank"><font color="#002F6C">Panagiotis Ntziachristos</font></a>, Department of Biochemistry and Molecular Genetics, Northwestern University</li>
 <li><a href="https://med.virginia.edu/faculty/faculty-listing/ar7jq/" target="_blank"><font color="#002F6C">Aakrosh Ratan</font></a>, Center for Public Health Genomics, University of Virginia</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/ssr4n/" target="_blank"><font color="#002F6C">Stephen S. Rich</font></a>, Center for Public Health Genomics, University of Virginia</li>
 <li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Steven Wang</font></a>, Department of Genetics, Yale University</li>
 <li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="https://scholar.google.com/citations?user=EBpqdckAAAAJ&hl=en" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Hackensack Meridian Health Center for Discovery and Innovation</li>
-<li><a href="http://faculty.virginia.edu/yanlab/" target="_blank"><font color="#002F6C">Zhen Yan</font></a>, Center for Skeletal Muscle Research, Robert M. Berne Cardiovascular Research Center, University of Virginia</li>
+<li><a href="https://hmh-cdi.org/our-team/xue-lab/" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
+<li><a href="https://www.cvrc.virginia.edu/Yan/" target="_blank"><font color="#002F6C">Zhen Yan</font></a>, Center for Skeletal Muscle Research, Robert M. Berne Cardiovascular Research Center, University of Virginia</li>
 <li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science, University of Virginia</li>
-<li><a href="http://faculty.virginia.edu/tingtingzhang/" target="_blank"><font color="#002F6C">Tingting Zhang</font></a>, Department of Statistics, University of Virginia</li>
+<li><a href="https://www.stat.pitt.edu/people/tingting-zhang" target="_blank"><font color="#002F6C">Tingting Zhang</font></a>, Department of Statistics, University of Pittsburgh</li>
 <li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
 </p></ul>
 <hr>
@@ -210,7 +214,7 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 </div>
 </div>
 <hr>
-<p align="right">Last modified: February 16, 2021</p>
+<p align="right">Last modified: July 14, 2021</p>
 
 </div>
 
