--- a/people.htm
+++ b/people.htm
@@ -279,47 +279,6 @@ Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<!--<h4><font color="#002F6C">Class of 2021</font></h4>
-<p style="line-height: 1.6;">
-<img align="right" src="images/zack_thomas.jpg" style="height:180px">
-<b>Zack Thomas</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:zvt3fn@virginia.edu">zvt3fn@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Zachary Thomas is an undergraduate student (Class of 2021) from Oakton, VA majoring in Biomedical Engineering and minoring in Computer Science. He is particularly interested in data science and its applications to further explore Biomedical Data. In his free time, he plays clarinet and bass clarinet with the UVA Wind Ensemble and Charlottesville Symphony Orchestra.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/alex_hickman.jpg" style="width:180px">
-<b>Alex Hickman</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:azh5kn@virginia.edu">azh5kn@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Alex Hickman is a Biomedical Engineering major (Class of 2021) interested in cell and molecular biology and biomedical data science. She is looking forward to pursuing research related to computational biology and applying what she has learned from her previous research in head and neck cancer. After graduating, she hopes to attend a graduate program in computer science in order to prepare her for the world of data science! In her free time, she enjoys kayaking, biking, playing the ukulele, volunteering, and painting with Bob Ross.
-</p><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/xinyue_qiu.jpg" style="width:180px">
-<b>Xinyue Qiu</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:xq8zu@virginia.edu">xq8zu@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Xinyue is an undergraduate student (Class of 2021), double majoring in Biology and Statistics. Interested in both genetics and statistical analysis, she is interested in both obtaining knowledge and rich hands-on experience related. In her free time, she enjoys listening to music, traveling, drawing, and playing games. 
-</p><br><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
-<b>Drew Vanichkachorn</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:acv3by@virginia.edu">acv3by@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Drew Vanichkachorn is an undergraduate student (Class of 2021) in the College of Arts and Sciences. He is majoring in Global Public Health and is hopefully pursuing a BA in environmental science. Drew is excited to be learning about genomics and believes this field to be important in the future of medicine. He is also interested in music and enjoys playing the piano and viola when he can.
-</p><br><br>
-<p style="line-height: 1.6;">
-<img align="right" src="images/shahbaz_nizam.jpg" style="width:180px">
-<b>Shahbaz Nizam</b></p>
-<p style="line-height: 1.6;">
-Email: <a href="mailto:sn7mq@virginia.edu">sn7mq@virginia.edu</a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Shahbaz Nizam is a Statistics and Economics major in the class of 2021. He is interested in learning about data science and its application with finance and marketing. In his free time, he enjoys traveling, cooking foreign cuisines, and watching movies.
-</p><br><br><br><br>-->
 <h4><font color="#002F6C">Class of 2022</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/ben_ke.jpg" style="width:180px">
@@ -467,6 +426,14 @@ Kamil Urbanowski is an undergraduate student (Class of 2024) from Northern Virgi
 Email: <a href="mailto:scs8kcb@virginia.edu">scs8kcb@virginia.edu</a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New York majoring in global public health or mathematics on the pre-med track. She is interested in seeing how data science and  biology can work hand in hand to further advance the medical field. In her free time, she volunteers through Madison House, and is a member of the club squash team and Woody-Cauthen association student council organization.
+</p><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/caitlin_mcintyre.jpg" style="width:180px">
+<b>Caitlin McIntyre</b></p>
+<p style="line-height: 1.6;">
+Email: <a href="mailto:cam3zw@virginia.edu">cam3zw@virginia.edu</a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Caitlin McIntyre is an undergraduate student (Class of 2024) from the Bay Area majoring in global public health or biology on a pre-health track. She is fascinated by the interdisciplinary nature of genomics research and harnessing this work to discover more about gene expression and human diseases. In her free time, she enjoys volunteering through Madison House, spending time with friends and listening to music.
 </p><br>
 <hr>
 <h3><font color="#002F6C">Lab Alumni</font></h3>
@@ -701,7 +668,7 @@ Sydney Saviano is an undergraduate student (Class or 2024) from Westchester, New
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: June 30, 2021</p>
+<p align="right">Last modified: August 11, 2021</p>
 
 </div>
 
