--- a/research.htm
+++ b/research.htm
@@ -63,7 +63,7 @@ ul.topnav li.icon {display: none;}
 }
 .column {
     float: left;
-    width: 20%;
+    width: 16%;
 }
 /* Clear floats after the columns */
 .row:after {
@@ -193,6 +193,11 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 </div>
 <div class="column">
 <p>
+<a href="https://www.nsf.gov/" target="_blank"><img align="center" src="images/nsf.png" style="width:100px"></a>
+</p>
+</div>
+<div class="column">
+<p>
 <a href="http://www.chrb.org/" target="_blank"><img align="center" src="images/chrb.jpg" style="height:100px"></a>
 </p>
 </div>
@@ -203,18 +208,18 @@ High-dimensional genomic data analysis is challenging because of noises and bias
 </div>
 <div class="column">
 <p>
-<a href="http://www.phibetapsi.org/national-project/" target="_blank"><img align="left" src="images/phibetapsi_logo.jpg" style="width:80px"></a>
+<a href="http://www.phibetapsi.org/national-project/" target="_blank"><img align="center" src="images/phibetapsi_logo.jpg" style="width:80px"></a>
 </p>
 </div>
 <div class="column">
 <p>
 <br>
-<a href="http://jktgfoundation.org/" target="_blank"><img align="left" src="images/jktg.png" style="width:110px"></a>
+<a href="http://jktgfoundation.org/" target="_blank"><img align="center" src="images/jktg.png" style="width:110px"></a>
 </p>
 </div>
 </div>
 <hr>
-<p align="right">Last modified: July 14, 2021</p>
+<p align="right">Last modified: August 11, 2021</p>
 
 </div>
 
