--- a/index.htm
+++ b/index.htm
@@ -142,6 +142,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">August 2021</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		In collaboration with Drs. Aidong Zhang and Stefan Bekiranov, Chongzhi receives a medium grant from NSF as a co-PI.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">June 2021</font>
 		</p>
 	</div>
@@ -690,7 +702,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: June 30, 2021</p>
+<p align="right">Last modified: August 11, 2021</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
